# spotify

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
music_harvester/: __init__.py  config_loader.py  env.py  http.py  main.py  models.py
music_harvester/config/: rules.yaml  sources.yaml  taste_profile.yaml  tracks.txt
music_harvester/db/: schema.sql  store.py
music_harvester/engine/: __init__.py  bridge.py  crates.py  dedupe.py  explain.py  filter.py  normalize.py  pools.py  score.py  sequence.py
music_harvester/sources/: __init__.py  base.py  lastfm.py  listenbrainz.py  soundcloud.py  spotify.py  text_import.py
public/: app.js  index.html  styles.css
src/: server.js
