[project]
name = "qrator"
version = "0.1.0"
description = "Personal music discovery and Spotify playlist generation from trusted human sources."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
  "PyYAML>=6",
  "rapidfuzz>=3",
  "rich>=13",
  "python-dotenv>=1",
]

[project.scripts]
music-harvester = "music_harvester.main:main"
qrator = "music_harvester.main:main"

[tool.setuptools.packages.find]
include = ["music_harvester*"]
